--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
-                    <img src="img/pp.jpg" alt="">
+                    <img src="img/DSC04984.JPG" alt="">
                 </div>
             </div>
             <div class="right-header">
@@ -109,7 +109,7 @@
                     <div class="progress-bar">
                         <p class="prog-title">javascript</p>
                         <div class="progress-con">
-                            <p class="prog-text">75%</p>
+                            <p class="prog-text">85%</p>
                             <div class="progress">
                                 <span class="js"></span>
                             </div>
@@ -120,26 +120,44 @@
                         <div class="progress-con">
                             <p class="prog-text">75%</p>
                             <div class="progress">
-                                <span class="react"></span>
+                                <span class="ajax"></span>
                             </div>
                         </div>
                     </div>
                     <div class="progress-bar">
                         <p class="prog-title">Jquery</p>
                         <div class="progress-con">
-                            <p class="prog-text">87%</p>
+                            <p class="prog-text">75%</p>
                             <div class="progress">
-                                <span class="node"></span>
+                                <span class="jquery"></span>
                             </div>
                         </div>
                     </div>
                     <div class="progress-bar">
                         <p class="prog-title">langage c</p>
                         <div class="progress-con">
-                            <p class="prog-text">70%</p>
+                            <p class="prog-text">90%</p>
                             <div class="progress">
-                                <span class="python"></span>
+                                <span class="c"></span>
                             </div>
+                        </div>
+                    </div>
+                            <div class="progress-bar">
+                                <p class="prog-title">Java</p>
+                                <div class="progress-con">
+                                    <p class="prog-text">60%</p>
+                                    <div class="progress">
+                                        <span class="jav"></span>
+                                    </div>
+                                </div>
+                            </div>
+                                    <div class="progress-bar">
+                               <p class="prog-title">Boostrap</p>
+                                        <div class="progress-con">
+                                            <p class="prog-text">70%</p>
+                                            <div class="progress">
+                                                <span class="boostrap"></span>
+                                           </div>
                         </div>
                     </div>
                 </div>
