--- a/index.html
+++ b/index.html
@@ -162,14 +162,14 @@
                     </div>
                 </div>
             </div>
-            <h4 class="stat-title">My Timeline</h4>
+            <h4 class="stat-title">Diplomes et Certificats</h4>
             <div class="timeline">
                 <div class="timeline-item">
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">2010 - present</p>
-                    <h5>Web Developer<span> - Vircrosoft</span></h5>
+                    <p class="tl-duration">2013:</p>
+                    <h5>Certificat de Fin d'Etude Elémentaire<span><br>Ecole El Hadji Ibrahima Sarr</span></h5>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
                     </p>
@@ -178,8 +178,8 @@
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">2008 - 2011</p>
-                    <h5>Software Engineer<span> - Boogle, Inc.</span></h5>
+                    <p class="tl-duration">2018:</p>
+                    <h5>Brevet de Fin d'Etude Moyenne<span><br>CEM Ballabey</span></h5>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
                     </p>
@@ -188,8 +188,8 @@
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">2016 - 2017</p>
-                    <h5>C++ Programmer<span> - Slime Tech</span></h5>
+                    <p class="tl-duration">2022</p>
+                    <h5>Baccalaureat<span><br>Institut Malick Sy de Thiès</span></h5>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
                     </p>
@@ -198,7 +198,7 @@
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">2009 - 2013</p>
+                    <p class="tl-duration">2023</p>
                     <h5>Business Degree<span> - Sussex University</span></h5>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
