--- a/index.html
+++ b/index.html
@@ -198,8 +198,18 @@
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
+                    <p class="tl-duration">2023-2024</p>
+                    <h5>licence 1<span><br>Universite Alioune Diop de Bambey</span></h5>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
+                    </p>
+                </div>
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
                     <p class="tl-duration">2023</p>
-                    <h5>Business Degree<span> - Sussex University</span></h5>
+                    <h5>Certificat en Cybersecurity essantiel<span><br> Cisco Network Academy</span></h5>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
                     </p>
@@ -208,18 +218,8 @@
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">2013 - 2016</p>
-                    <h5>Computer Science Degree<span> - Brookes University</span></h5>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
-                    </p>
-                </div>
-                <div class="timeline-item">
-                    <div class="tl-icon">
-                        <i class="fas fa-briefcase"></i>
-                    </div>
-                    <p class="tl-duration">2017 - present</p>
-                    <h5>3d Animation<span> - Brighton University</span></h5>
+                    <p class="tl-duration">2024-2025</p>
+                    <h5>Licence 2 en cours<span> - Université Alioune Diop de Bambey</span><br></h5>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
                     </p>
