Ajout de diplome partie2, les experiences acquises

--- a/index.html
+++ b/index.html
@@ -169,9 +169,11 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <p class="tl-duration">2013:</p>
-                    <h5>Certificat de Fin d'Etude Elémentaire<span><br>Ecole El Hadji Ibrahima Sarr</span></h5>
+                    <h5>🔹Certificat de Fin d'Etude Elémentaire<span><br>Ecole El Hadji Ibrahima Sarr</span></h5>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
+                        ✅ Acquisition des bases en lecture, écriture et calcul.
+                        ✅ Développement des compétences en communication orale et écrite.
+                        ✅ Premières notions de logique et de raisonnement
                     </p>
                 </div>
                 <div class="timeline-item">
@@ -179,9 +181,11 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <p class="tl-duration">2018:</p>
-                    <h5>Brevet de Fin d'Etude Moyenne<span><br>CEM Ballabey</span></h5>
+                    <h5>🔹Brevet de Fin d'Etude Moyenne<span><br>CEM Ballabey</span></h5>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
+                        ✅ Maîtrise des fondamentaux en mathématiques, sciences et français.
+                        ✅ Développement de la pensée critique et des capacités analytiques.
+                        ✅ Initiation à l'informatique et aux nouvelles technologies.
                     </p>
                 </div>
                 <div class="timeline-item">
@@ -189,9 +193,11 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <p class="tl-duration">2022</p>
-                    <h5>Baccalaureat<span><br>Institut Malick Sy de Thiès</span></h5>
+                    <h5>🔹Baccalaureat<span><br>Institut Malick Sy de Thiès</span></h5>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
+                        ✅ Approfondissement des matières scientifiques et littéraires.
+                        ✅ Acquisition de compétences en méthodologie de recherche et analyse.
+                        ✅ Développement de l'autonomie et de l'esprit d'initiative.
                     </p>
                 </div>
                 <div class="timeline-item">
@@ -199,9 +205,11 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <p class="tl-duration">2023-2024</p>
-                    <h5>licence 1<span><br>Universite Alioune Diop de Bambey</span></h5>
+                    <h5>🔹licence 1<span><br>Universite Alioune Diop de Bambey</span></h5>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
+                        ✅ Bases en programmation (Pascal.) et algorithmiques.
+                        ✅ Introduction aux réseaux et systèmes informatiques.
+                        ✅ Premiers projets pratiques en développement web.
                     </p>
                 </div>
                 <div class="timeline-item">
@@ -209,9 +217,11 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <p class="tl-duration">2023</p>
-                    <h5>Certificat en Cybersecurity essantiel<span><br> Cisco Network Academy</span></h5>
+                    <h5>🔹Certificat en Cybersecurity essantials<span><br> Cisco Network Academy</span></h5>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
+                        ✅ Compréhension des fondamentaux de la cybersécurité.
+                        ✅ Protection des systèmes contre les menaces et attaques.
+                        ✅ Notions de cryptographie et sécurisation des réseaux
                     </p>
                 </div>
                 <div class="timeline-item">
@@ -219,9 +229,13 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <p class="tl-duration">2024-2025</p>
-                    <h5>Licence 2 en cours<span> - Université Alioune Diop de Bambey</span><br></h5>
+                    <h5>🔹Licence 2 en cours<span> <br> Université Alioune Diop de Bambey</span></h5>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
+                        ✅ Modélisation et MERISE : conception et structuration des bases de données à l’aide des modèles conceptuel (MCD), logique (MLD) et physique (MPD).
+                        ✅ Bases de données : manipulation avancée de SQL (MySQL, PostgreSQL, etc.), normalisation et optimisation des requêtes.
+                        ✅ Linux : administration de systèmes sous Linux (Ubuntu, Debian, etc.), gestion des fichiers, utilisateurs et permissions.
+                        ✅ Approfondissement en réseaux et protocoles de communication.
+                        ✅ Développement web et applications avancées.
                     </p>
                 </div>
             </div>
