--- a/index.html
+++ b/index.html
@@ -168,48 +168,14 @@
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">2013:</p>
-                    <h5>🔹Certificat de Fin d'Etude Elémentaire<span><br>Ecole El Hadji Ibrahima Sarr</span></h5>
+                    <p class="tl-duration">2024-2025</p>
+                    <h5>🔹Licence 2 (en cours)<span> <br> Université Alioune Diop de Bambey</span></h5>
                     <p>
-                        ✅ Acquisition des bases en lecture, écriture et calcul.
-                        ✅ Développement des compétences en communication orale et écrite.
-                        ✅ Premières notions de logique et de raisonnement
-                    </p>
-                </div>
-                <div class="timeline-item">
-                    <div class="tl-icon">
-                        <i class="fas fa-briefcase"></i>
-                    </div>
-                    <p class="tl-duration">2018:</p>
-                    <h5>🔹Brevet de Fin d'Etude Moyenne<span><br>CEM Ballabey</span></h5>
-                    <p>
-                        ✅ Maîtrise des fondamentaux en mathématiques, sciences et français.
-                        ✅ Développement de la pensée critique et des capacités analytiques.
-                        ✅ Initiation à l'informatique et aux nouvelles technologies.
-                    </p>
-                </div>
-                <div class="timeline-item">
-                    <div class="tl-icon">
-                        <i class="fas fa-briefcase"></i>
-                    </div>
-                    <p class="tl-duration">2022</p>
-                    <h5>🔹Baccalaureat<span><br>Institut Malick Sy de Thiès</span></h5>
-                    <p>
-                        ✅ Approfondissement des matières scientifiques et littéraires.
-                        ✅ Acquisition de compétences en méthodologie de recherche et analyse.
-                        ✅ Développement de l'autonomie et de l'esprit d'initiative.
-                    </p>
-                </div>
-                <div class="timeline-item">
-                    <div class="tl-icon">
-                        <i class="fas fa-briefcase"></i>
-                    </div>
-                    <p class="tl-duration">2023-2024</p>
-                    <h5>🔹licence 1<span><br>Universite Alioune Diop de Bambey</span></h5>
-                    <p>
-                        ✅ Bases en programmation (Pascal.) et algorithmiques.
-                        ✅ Introduction aux réseaux et systèmes informatiques.
-                        ✅ Premiers projets pratiques en développement web.
+                        ✅ Modélisation et MERISE : conception et structuration des bases de données à l’aide des modèles conceptuel (MCD), logique (MLD) et physique (MPD).<br>
+                        ✅ Bases de données : manipulation avancée de SQL (MySQL, PostgreSQL, etc.), normalisation et optimisation des requêtes.<br>
+                        ✅ Linux : administration de systèmes sous Linux (Ubuntu, Debian, etc.), gestion des fichiers, utilisateurs et permissions.<br>
+                        ✅ Approfondissement en réseaux et protocoles de communication.<br>
+                        ✅ Développement web et applications avancées.<br>
                     </p>
                 </div>
                 <div class="timeline-item">
@@ -219,26 +185,60 @@
                     <p class="tl-duration">2023</p>
                     <h5>🔹Certificat en Cybersecurity essantials<span><br> Cisco Network Academy</span></h5>
                     <p>
-                        ✅ Compréhension des fondamentaux de la cybersécurité.
-                        ✅ Protection des systèmes contre les menaces et attaques.
-                        ✅ Notions de cryptographie et sécurisation des réseaux
+                        ✅ Compréhension des fondamentaux de la cybersécurité.<br>
+                        ✅ Protection des systèmes contre les menaces et attaques.<br>
+                        ✅ Notions de cryptographie et sécurisation des réseaux.<br>
                     </p>
                 </div>
                 <div class="timeline-item">
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">2024-2025</p>
-                    <h5>🔹Licence 2 en cours<span> <br> Université Alioune Diop de Bambey</span></h5>
+                    <p class="tl-duration">2023-2024</p>
+                    <h5>🔹licence 1<span><br>Universite Alioune Diop de Bambey</span></h5>
                     <p>
-                        ✅ Modélisation et MERISE : conception et structuration des bases de données à l’aide des modèles conceptuel (MCD), logique (MLD) et physique (MPD).
-                        ✅ Bases de données : manipulation avancée de SQL (MySQL, PostgreSQL, etc.), normalisation et optimisation des requêtes.
-                        ✅ Linux : administration de systèmes sous Linux (Ubuntu, Debian, etc.), gestion des fichiers, utilisateurs et permissions.
-                        ✅ Approfondissement en réseaux et protocoles de communication.
-                        ✅ Développement web et applications avancées.
+                        ✅ Bases en programmation (Pascal.) et algorithmiques.<br>
+                        ✅ Introduction aux réseaux et systèmes informatiques.<br>
+                        ✅ Premiers projets pratiques en développement web.<br>
                     </p>
                 </div>
-            </div>
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="tl-duration">2022</p>
+                    <h5>🔹Baccalaureat<span><br>Institut Malick Sy de Thiès</span></h5>
+                    <p>
+                        ✅ Approfondissement des matières scientifiques et littéraires.<br>
+                        ✅ Acquisition de compétences en méthodologie de recherche et analyse.<br>
+                        ✅ Développement de l'autonomie et de l'esprit d'initiative.<br>
+                    </p>
+                </div>
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="tl-duration">2018</p>
+                    <h5>🔹Brevet de Fin d'Etude Moyenne<span><br>CEM Ballabey</span></h5>
+                    <p>
+                        ✅ Maîtrise des fondamentaux en mathématiques, sciences et français.<br>
+                        ✅ Développement de la pensée critique et des capacités analytiques.<br>
+                        ✅ Initiation à l'informatique et aux nouvelles technologies.<br>
+                    </p>
+                </div>
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="tl-duration">2013:</p>
+                    <h5>🔹Certificat de Fin d'Etude Elémentaire<span><br>Ecole El Hadji Ibrahima Sarr</span></h5>
+                    <p>
+                        ✅ Acquisition des bases en lecture, écriture et calcul. <br>
+                        ✅ Développement des compétences en communication orale et écrite.<br>
+                        ✅ Premières notions de logique et de raisonnement.<br>
+                    </p>
+                </div>
+            </div>            
         </section>
         <section class="container" id="portfolio">
             <div class="main-title">
@@ -471,61 +471,64 @@
                 </div>
                 <div class="contact-content-con">
                     <div class="left-contact">
-                        <h4>Contact me here</h4>
+                        <h4>Contactez moi</h4>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            In, laborum numquam? Quam excepturi perspiciatis quas quasi.
+                         Nous sommes à votre écoute !
+                        N'hésitez pas à remplir ce formulaire pour toute question,
+                         suggestion ou demande d'information. 
+                         Votre message est important pour nous 
+                         et nous vous répondrons dans les plus brefs délais.
                         </p>
                         <div class="contact-info">
                             <div class="contact-item">
                                 <div class="icon">
                                     <i class="fas fa-map-marker-alt"></i>
-                                    <span>Location</span>
+                                    <span>Localisation:</span>
                                 </div>
                                 <p>
-                                    : London, united Kingdom
+                                    Villa 43Ouest Ballabey, Thiès, Sénégal.
                                 </p>
                             </div>
                             <div class="contact-item">
                                 <div class="icon">
                                     <i class="fas fa-envelope"></i>
-                                    <span>Email</span>
+                                    <span>Email:</span>
                                 </div>
                                 <p>
-                                    <span>: maclinzuniversal@gmail.com</span>
+                                    <span> seyeelhadjimor0@gmail.com</span>
                                 </p>
                             </div>
                             <div class="contact-item">
                                 <div class="icon">
                                     <i class="fas fa-user-graduate"></i>
-                                    <span>Education</span>
+                                    <span>Education:</span>
                                 </div>
                                 <p>
-                                    <span>: Sussex University, East Sussex</span>
+                                    <span> Université Alioune  Diop , Bambey</span>
                                 </p>
                             </div>
                             <div class="contact-item">
                                 <div class="icon">
                                     <i class="fas fa-user-graduate"></i>
-                                    <span>Mobile Number</span>
+                                    <span>Numero de Téléphone:</span>
                                 </div>
                                 <p>
-                                    <span>: 07522670617</span>
+                                    <span> +221 77 255 92 26</span>
                                 </p>
                             </div>
                             <div class="contact-item">
                                 <div class="icon">
                                     <i class="fas fa-globe-africa"></i>
-                                    <span>Languages</span>
+                                    <span>Langues:</span>
                                 </div>
                                 <p>
-                                    <span>: Afrikaans, English, Spanish</span>
+                                    <span> Français, Anglais, Wolof</span>
                                 </p>
                             </div>
                         </div>
                         <div class="contact-icons">
                             <div class="contact-icon">
-                                <a href="www.facebook.com" target="_blank">
+                                <a href="https://www.facebook.com/elhadjimor.seye.3363" target="_blank">
                                     <i class="fab fa-facebook-f"></i>
                                 </a>
                                 <a href="#" target="_blank">
@@ -543,14 +546,14 @@
                     <div class="right-contact">
                         <form action="" class="contact-form">
                             <div class="input-control i-c-2">
-                                <input type="text" required placeholder="YOUR NAME">
-                                <input type="email" required placeholder="YOUR EMAIL">
+                                <input type="text" required placeholder="NOM COMPLET">
+                                <input type="email" required placeholder="EMAIL">
                             </div>
                             <div class="input-control">
-                                <input type="text" required placeholder="ENTER SUBJECT">
+                                <input type="text" required placeholder="SUJET">
                             </div>
                             <div class="input-control">
-                                <textarea name="" id="" cols="15" rows="8" placeholder="Message Here..."></textarea>
+                                <textarea name="" id="" cols="15" rows="8" placeholder="Ecrivez votre message..."></textarea>
                             </div>
                             <div class="submit-btn">
                                 <a href="#" class="main-btn">
