L'ajout de wordpress dans les hardSkills

--- a/index.html
+++ b/index.html
@@ -151,13 +151,12 @@
                                     </div>
                                 </div>
                             </div>
-                                    <div class="progress-bar">
-                               <p class="prog-title">Boostrap</p>
-                                        <div class="progress-con">
-                                            <p class="prog-text">70%</p>
-                                            <div class="progress">
-                                                <span class="boostrap"></span>
-                                           </div>
+                <div class="progress-bar">
+                    <p class="prog-title">WordPress</p>
+                    <div class="progress-con">
+                        <p class="prog-text">85%</p> 
+                        <div class="progress">
+                            <span class="wp"></span>
                         </div>
                     </div>
                 </div>
@@ -484,7 +483,7 @@
                                 <div class="icon">
                                     <i class="fas fa-map-marker-alt"></i>
                                     <span>Localisation:</span>
-                                </div>
+                                </div><br>
                                 <p>
                                     Villa 43Ouest Ballabey, Thiès, Sénégal.
                                 </p>
@@ -531,14 +530,14 @@
                                 <a href="https://www.facebook.com/elhadjimor.seye.3363" target="_blank">
                                     <i class="fab fa-facebook-f"></i>
                                 </a>
-                                <a href="#" target="_blank">
-                                    <i class="fab fa-twitter"></i>
+                                <a href="https://www.linkedin.com/in/el-hadji-mor-seye-210aba287?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">
+                                    <i class="	fab fa-linkedin"></i>
                                 </a>
-                                <a href="#" target="_blank">
+                                <a href="https://github.com/SEY-JUGGLER" target="_blank">
                                     <i class="fab fa-github"></i>
                                 </a>
-                                <a href="#" target="_blank">
-                                    <i class="fab fa-youtube"></i>
+                                <a href="https://wa.me/qr/XASTU4ZINMPXN1" target="_blank">
+                                    <i class="fab fa-whatsapp"></i>
                                 </a>
                             </div>
                         </div>
